Adds sass and partials files

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,8 +1,17 @@
-@import './common';
-@import './example';
-@import './header';
-@import './hero';
-@import './features';
-@import './solutions';
-@import './cases';
-@import './blog';
+@import './header-logo';
+@import './header-nav';
+@import './hero-txt';
+@import './hero-btn';
+@import './solutions-img';
+@import './solutions-txt';
+@import './cases-list';
+@import './cases-txt';
+@import './blog-txt';
+@import './blog-img';
+@import './team-txt';
+@import './team-list';
+@import './callback-img';
+@import './callback-form';
+@import './footer-icons';
+@import './footer-txt';
+@import './activities'
