--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -14,4 +14,6 @@
 @import './callback-form';
 @import './footer-icons';
 @import './footer-txt';
-@import './activities'
+@import './footer';
+@import './activities';
+@import './modal';
