--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -22,9 +22,17 @@
   opacity: 0;
   visibility: hidden;
 
+  // Текст окна
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+
   /*  Установаем ширину окна  */
   width: 100%;
-  max-width: 500px;
+  // max-width: 500px;
+  max-width: 450px;
 
   /*  Центрируем и задаем z-index */
   position: fixed;
@@ -37,8 +45,9 @@
   box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
   text-align: center;
   padding: 30px;
-  border-radius: 3px;
-  background-color: #fff;
+  // border-radius: 3px;
+  border-radius: 4px;
+  background-color: rgb(159, 222, 252);
   transition: 0.3s all;
 }
 
@@ -68,7 +77,8 @@ a {
   padding: 20px;
   display: inline-block;
   text-decoration: none;
-  background-color: #414b52;
+  // background-color: #414b52;
+  background-color: #457ba1;
   margin: 10px;
   color: #fff;
   border-radius: 3px;
