--- a/src/partials/сases-txt.html
+++ b/src/partials/сases-txt.html
@@ -1,3 +1,8 @@
 <section class="cases">
-  <p>Lorem ipsum dolor sit amet.</p>
+  <p class="cases__uppertitle">This is what we do</p>
+  <h2 class="cases__title">Business Cases</h2>
+  <p class="cases__text">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
+    sapiente!
+  </p>
 </section>
