--- a/src/sass/_cases-list.scss
+++ b/src/sass/_cases-list.scss
@@ -1,4 +1,14 @@
 .cases {
-    background-color: green;
-    
+  background-color: #ffffff;
+}
+ul {
+  text-decoration: none;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.cases-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
 }
