--- a/src/partials/solutions-txt.html
+++ b/src/partials/solutions-txt.html
@@ -17,3 +17,15 @@
   <!-- Подложка под модальным окном -->
   <div class="overlay js-overlay-modal"></div>
 </section>
+
+<div class="container">
+  <p class="text solution__foreword">What you are looking for</p>
+  <h2 class="title solution__title">We provide bespoke solutions</h2>
+  <p class="text solution__text">
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, ipsum
+    dignissimos quae laudantium asperiores nam aliquid impedit harum illum
+    dolore explicabo ab dolores itaque rerum temporibus doloribus iste maiores
+    deleniti?
+  </p>
+  <button class="button solution__button" type="button">Read More</button>
+</div>
