--- a/src/partials/hero-txt.html
+++ b/src/partials/hero-txt.html
@@ -1,3 +1,8 @@
 <section class="hero">
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+  <div class="container title">
+    <h1 class="hero-title">The Sky Is The Limit </h1>
+  </div>
+  <div class="container text">
+    <p class="hero-text">We provide world class financial assistance</p>
+  </div>
 </section>
