--- a/src/partials/header-logo.html
+++ b/src/partials/header-logo.html
@@ -1,5 +1,8 @@
 <header class="header">
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae adipisci nihil ex ratione magnam, aut dolore unde accusantium, quidem nobis exercitationem harum ipsa minima aspernatur quasi? Possimus magnam placeat quidem?
-    </p>
+  <a href="#" class="header__link" lang="en">
+    <span class="header__logo">Finance</span>&nbsp;Ledger
+    <svg class="header__Icon">
+      <use href="./images/headerLogo.svg" class="header__svg"></use>
+    </svg>
+  </a>
 </header>
