--- a/src/partials/hero-btn.html
+++ b/src/partials/hero-btn.html
@@ -14,3 +14,9 @@
     <p class="modal__title">Заголовок окна 1</p>
   </div>
 </section>
+
+<button class="hero__btn" type="button">
+  <svg class="hero__btn-icon" width="9" height="18">
+    <use href="./images/symbol-defs.svg"></use></svg
+  >Read More
+</button>
