--- a/src/sass/_callback-form.scss
+++ b/src/sass/_callback-form.scss
@@ -49,10 +49,6 @@
     border-radius: 4px;
 }
 
-.callback-form__input:hover,
-.callback-form__input:focus {
-    border-color: var(--accent-text-color);
-}
 
 
 
@@ -71,13 +67,13 @@
     border-radius: 4px;
     text-align: center;
     text-decoration: none;
-    font-family: 'Roboto';
     font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.4;
     letter-spacing: 0.06em;
     cursor: pointer;
 
-    color: #28A745;
+    color: #FFFFFF;
+    background-color: #28A745;
 }
