--- a/src/partials/team-list.html
+++ b/src/partials/team-list.html
@@ -1,11 +1,6 @@
 <ul class="list team-list">
   <li class="team-member">
-    <img
-      width="420"
-      height="280"
-      src="./images/team-member-1.jpg"
-      alt="photo President"
-    />
+
     <div class="team-description">
       <h3 class="team-title third-title">John Doe</h3>
       <p lang="en" class="team-text">President</p>
@@ -42,12 +37,7 @@
     </div>
   </li>
   <li class="team-member">
-    <img
-      width="428"
-      height="286"
-      src="./images/team-member-2.jpg"
-      alt="photo vice president"
-    />
+    <img width="428" height="286" src="./images/team-member-2.jpg" alt="photo vice president" />
     <div class="team-description">
       <h3 class="team-title third-title">Jane Doe</h3>
       <p lang="en" class="team-text">Vice President</p>
@@ -84,12 +74,7 @@
     </div>
   </li>
   <li class="team-member">
-    <img
-      width="420"
-      height="280"
-      src="./images/team-member-3.jpg"
-      alt="photo marketing head"
-    />
+    <img width="420" height="280" src="./images/team-member-3.jpg" alt="photo marketing head" />
     <div class="team-description">
       <h3 class="team-title third-title">Steve Smith</h3>
       <p lang="en" class="team-text">Marketing Head</p>
