--- a/src/partials/hero-txt.html
+++ b/src/partials/hero-txt.html
@@ -1,6 +1,25 @@
 <section class="hero">
   <div class="container title">
-    <h1 class="hero-title">The Sky Is The Limit </h1>
+    <!-- Slider main container -->
+    <div class="swiper">
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">
+          <h1 class="hero-title">The Sky Is The Limit</h1>
+        </div>
+        <div class="swiper-slide">
+          <h1 class="hero-title">Lorem ipsum dolor sit amet.</h1>
+        </div>
+        <div class="swiper-slide">
+          <h1 class="hero-title">Lorem ipsum dolor sit amet. Hello</h1>
+        </div>
+      </div>
+
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </div>
   </div>
   <div class="container text">
     <p class="hero-text">We provide world class financial assistance</p>
