--- a/src/sass/_blog-txt.scss
+++ b/src/sass/_blog-txt.scss
@@ -10,6 +10,9 @@
     font-size: 20px;
     line-height: 1.65;
     color: #FFFFFF;
+    margin-top: 50px;
+    margin-left: 25px;
+    padding-top: 25px;
 }
 
 .blog__title {
@@ -18,6 +21,7 @@
     font-size: 38px;
     line-height: 1.26;
     color: #FFFFFF;
+    margin-left: 25px;
 }
 
 .blog__article {
@@ -27,6 +31,7 @@
     font-size: 18px;
     line-height: 1.55;
     color: #FFFFFF;
+    margin-left: 25px;
 }
 
 button {
@@ -46,4 +51,13 @@ button {
     line-height: 1.55;
     background: #0284D0;
     color: #FFFFFF;
+    margin-bottom: 50px;
+    margin-top: 25px;
+    margin-left: 25px;
+
+    &:hover,
+    &:focus {
+        background: #57aee0;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    }
 }
