--- a/src/partials/footer-txt.html
+++ b/src/partials/footer-txt.html
@@ -1,3 +1,17 @@
 <footer class="footer">
     <div class="footer__text">Copyright &copy 2021 - FinanceLedger</div>
 </footer>
+
+<div class="swiper">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">Prime</div>
+        <div class="swiper-slide">Keys</div>
+        <div class="swiper-slide">Last</div>
+        ...
+    </div>
+
+    <!-- If we need scrollbar -->
+    <div class="swiper-scrollbar"></div>
+</div>
