--- a/src/partials/hero-btn.html
+++ b/src/partials/hero-btn.html
@@ -12,6 +12,7 @@
       />
     </svg>
     <p class="modal__title">Заголовок окна 1</p>
+    <p class="modal__title">Hello world!) I'm glad to join the community of layout designers!</p>
   </div>
 </section>
 
@@ -20,3 +21,4 @@
     <use href="./images/symbol-defs.svg"></use></svg
   >Read More
 </button>
+
