--- a/src/partials/cases-list.html
+++ b/src/partials/cases-list.html
@@ -1,4 +1,4 @@
-<section class="cases">
+<section class="cases container">
   <ul class="cases-list">
     <li class="cases-item">
       <img src="/src/images/cases/нарада.jpg" alt="conference" width="320" />
