--- a/src/partials/blog-txt.html
+++ b/src/partials/blog-txt.html
@@ -2,5 +2,5 @@
     <p class="blog__date">April 16 2020</p>
     <h2 class="blog__title">Blog Post One</h2>
     <article class="blog__article">Это первая статья блога в которой Вы узнаете о наших целях и приоритетах</article>
-    <button class="blog__button" type="button">Читать блог</button>
+    <button class="blog__button" type="button">Читать наш блог</button>
 </section>
