--- a/src/partials/cases-list.html
+++ b/src/partials/cases-list.html
@@ -33,4 +33,39 @@
       />
     </li>
   </ul>
+
+  <ul class="cases-list__new">
+    <li class="cases-item__new">
+      <img src="/src/images/cases/нарада.jpg" alt="conference" width="450" />
+    </li>
+    <li class="cases-item__new">
+      <img src="/src/images/cases/проекти.jpg" alt="project" width="450" />
+    </li>
+    <li class="cases-item__new">
+      <img
+        src="/src/images/cases/співпраця.jpg"
+        alt="cooperation"
+        width="450"
+      />
+    </li>
+    <li class="cases-item__new">
+      <img src="/src/images/cases/команда.jpg" alt="team" width="450" />
+    </li>
+    <li class="cases-item__new">
+      <img src="/src/images/cases/робота.jpg" alt="job" width="450" />
+    </li>
+    <li class="cases-item__new">
+      <img src="/src/images/cases/будівлі.jpg" alt="buildings" width="450" />
+    </li>
+    <li class="cases-item__new">
+      <img src="/src/images/cases/керівник.jpg" alt="buildings" width="450" />
+    </li>
+    <li class="cases-item__new">
+      <img
+        src="/src/images/cases/робота команти.jpg"
+        alt="buildings"
+        width="450"
+      />
+    </li>
+  </ul>
 </section>
