--- a/src/sass/_cases-list.scss
+++ b/src/sass/_cases-list.scss
@@ -11,4 +11,11 @@ ul {
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
+
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 320px;
+  }
 }
