--- a/src/sass/_cases-list.scss
+++ b/src/sass/_cases-list.scss
@@ -11,7 +11,9 @@ ul {
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
+}
 
+.cases-list__new {
   @media screen and (min-width: 768px) {
     width: 354px;
   }
