--- a/src/partials/team-list.html
+++ b/src/partials/team-list.html
@@ -1,8 +1,8 @@
 <ul class="list team-list">
   <li class="team-member">
     <img
-      width="450"
-      height="290"
+      width="420"
+      height="280"
       src="./images/team-member-1.jpg"
       alt="photo President"
     />
@@ -13,28 +13,28 @@
         <li class="soc-item">
           <a href="" class="soc-link link">
             <svg class="soc-icon" width="20" height="20">
-              <use href="#"></use>
+              <use href="./images/team-icons.svg#icon-facebook-1"></use>
             </svg>
           </a>
         </li>
         <li class="soc-item">
           <a href="" class="soc-link link">
             <svg class="soc-icon" width="20" height="20">
-              <use href="#"></use>
+              <use href="./images/team-icons.svg#icon-twitter-1"></use>
             </svg>
           </a>
         </li>
         <li class="soc-item">
           <a href="" class="soc-link link">
             <svg class="soc-icon" width="20" height="20">
-              <use href="#"></use>
+              <use href="./images/team-icons.svg#icon-instagram-2"></use>
             </svg>
           </a>
         </li>
         <li class="soc-item">
           <a href="" class="soc-link link">
             <svg class="soc-icon" width="20" height="20">
-              <use href="#"></use>
+              <use href="./images/team-icons.svg#icon-linkedin-1"></use>
             </svg>
           </a>
         </li>
@@ -43,8 +43,8 @@
   </li>
   <li class="team-member">
     <img
-      width="428"
-      height="286"
+      width="420"
+      height="280"
       src="./images/team-member-2.jpg"
       alt="photo vice president"
     />
@@ -55,28 +55,28 @@
         <li class="soc-item">
           <a href="" class="soc-link link">
             <svg class="soc-icon" width="20" height="20">
-              <use href="#"></use>
+              <use href="./images/team-icons.svg#icon-facebook-1"></use>
             </svg>
           </a>
         </li>
         <li class="soc-item">
           <a href="" class="soc-link link">
             <svg class="soc-icon" width="20" height="20">
-              <use href="#"></use>
+              <use href="./images/team-icons.svg#icon-twitter-1"></use>
             </svg>
           </a>
         </li>
         <li class="soc-item">
           <a href="" class="soc-link link">
             <svg class="soc-icon" width="20" height="20">
-              <use href="#"></use>
+              <use href="./images/team-icons.svg#icon-instagram-2"></use>
             </svg>
           </a>
         </li>
         <li class="soc-item">
           <a href="" class="soc-link link">
             <svg class="soc-icon" width="20" height="20">
-              <use href="#"></use>
+              <use href="./images/team-icons.svg#icon-linkedin-1"></use>
             </svg>
           </a>
         </li>
@@ -97,28 +97,28 @@
         <li class="soc-item">
           <a href="" class="soc-link link">
             <svg class="soc-icon" width="20" height="20">
-              <use href="#"></use>
+              <use href="./images/team-icons.svg#icon-facebook-1"></use>
             </svg>
           </a>
         </li>
         <li class="soc-item">
           <a href="" class="soc-link link">
             <svg class="soc-icon" width="20" height="20">
-              <use href="#"></use>
+              <use href="./images/team-icons.svg#icon-twitter-1"></use>
             </svg>
           </a>
         </li>
         <li class="soc-item">
           <a href="" class="soc-link link">
             <svg class="soc-icon" width="20" height="20">
-              <use href="#"></use>
+              <use href="./images/team-icons.svg#icon-instagram-2"></use>
             </svg>
           </a>
         </li>
         <li class="soc-item">
           <a href="" class="soc-link link">
             <svg class="soc-icon" width="20" height="20">
-              <use href="#"></use>
+              <use href="./images/team-icons.svg#icon-linkedin-1"></use>
             </svg>
           </a>
         </li>
