--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -78,7 +78,7 @@ a {
   display: inline-block;
   text-decoration: none;
   // background-color: #414b52;
-  background-color: #457ba1;
+  // background-color: #457ba1;
   margin: 10px;
   color: #fff;
   border-radius: 3px;
