--- a/src/partials/header-logo.html
+++ b/src/partials/header-logo.html
@@ -1,9 +1,11 @@
 <header class="header">
-  <a href="#" class="header__link" lang="en">
-    <svg class="header__Icon">
-      <use href="./images/headerLogo.svg" class="header__svg"></use>
-    </svg>
-    <span class="header__logo">Finance</span>&nbsp;Ledger
-    
-  </a>
+  <div class="header__container">
+    <a href="#" class="header__link" lang="en">
+      <svg class="header__Icon">
+        <use href="./images/headerLogo.svg" class="header__svg"></use>
+      </svg>
+      <span class="header__logo">Finance</span>&nbsp;Ledger
+      
+    </a>
+  </div>
 </header>
