--- a/src/sass/_header-logo.scss
+++ b/src/sass/_header-logo.scss
@@ -1,7 +1,10 @@
 .header {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Rectangle.png);
     height: 700px;
+    background-repeat: no-repeat;
+    
   &__link {
+    
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
@@ -23,11 +26,13 @@
     width: 30px;
     height: 30px;
     fill: #ffffff;
-    // overflow: visible;
+   
   }
   &__svg {
-    // fill: #28a745;
+    color: #28a745;
+    fill: #28a745;
     width: 30px;
+    height: 30px;
   }
 }
 a{
