--- a/src/partials/header-logo.html
+++ b/src/partials/header-logo.html
@@ -2,10 +2,9 @@
   <div class="header__container">
     <a href="#" class="header__link" lang="en">
       <svg class="header__Icon">
-        <use href="./images/headerLogo.svg" class="header__svg"></use>
+        <use href="../images/symbol-defs.svg#icon-Vector"></use>
       </svg>
       <span class="header__logo">Finance</span>&nbsp;Ledger
-      
     </a>
   </div>
 </header>
